fix the bug image can not show.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<div class="each-news">
 							<div class="left-part">
 								<h3 class="title">光棍节不孤单 假面舞会HIGH翻天</h3>
-								<img src="../images/single13-wuhui.jpg" alt="舞会照片">
+								<img src="images/single13-wuhui.jpg" alt="舞会照片">
 							</div>
 							<div class="content">
 								<p>新闻热报</p>
@@ -166,7 +166,7 @@
 						<div class="each-news">
 							<div class="left-part">
 								<h3 class="title">“小”光棍节舞会</h3>	
-								<img src="../images/single14-wuhui.jpg" alt="舞会照片">
+								<img src="images/single14-wuhui.jpg" alt="舞会照片">
 							</div>
 							<div class="content">
 								<p>新闻热报</p>
