add join us qr code

--- a/index.html
+++ b/index.html
@@ -282,8 +282,14 @@
 						<p>如果你和我一样是程序猿， 我们可以一起探讨软件；</p>
 					</div>
 					<div class="contact-me">
-						<img src="images/weichat.jpg" alt="weichat">
-						<p>扫上面的二维码加我微信</p>
+						<div class="contact">
+							<img src="images/weichat.png" alt="weichat">
+							<p>加我微信</p>							
+						</div>
+						<div class="contact">
+							<img src="images/join-us.png" alt="join us">
+							<p> <a target="_blank" href="https://jinshuju.net/f/m2rLJA">加入舞协</a></p>							
+						</div>
 					</div>
 				</div>
 			</section>
