add awesome part

--- a/index.html
+++ b/index.html
@@ -261,6 +261,59 @@
 					</div>
 				</div>
 			</section>
+			<section class="more-awesome clearfix">
+				<h2>更多精彩瞬间</h2>
+				<hr>
+				<div class="each-moment">
+					<img src="images/outdoor1.jpg" alt="Awesome Moment">
+					<p>舞协第一次春游~</p>
+					<div class="layer"></div>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor2.jpg" alt="Awesome Moment">
+					<p>没有找到入口，却发现了另外一翻美景</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor3.jpg" alt="Awesome Moment">
+					<p>二郎山脚下</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor4.jpg" alt="Awesome Moment">
+					<p>舞协第二版宣传海报</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor5.jpg" alt="Awesome Moment">
+					<p>踢踏舞表演结束之后，大家一起去嗨皮</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor6.jpg" alt="Awesome Moment">
+					<p>2012年元旦晚会圆满结束</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor7.jpg" alt="Awesome Moment">
+					<p>舞协参加校五四青年汇演</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor8.jpg" alt="Awesome Moment">
+					<p>参加踢踏舞演出-大河之舞</p>
+				</div>	
+				<div class="each-moment">
+					<img src="images/outdoor9.jpg" alt="Awesome Moment">
+					<p>校庆80周年，大型舞蹈剧-长征路上，感谢舞协！</p>
+				</div>
+				<div class="each-moment">
+					<img src="images/outdoor10.jpg" alt="Awesome Moment">
+					<p>应运而生的Sunny Girl组合，这一群活泼可爱的女孩子，给舞协创造了很多奇迹</p>
+				</div>																											
+				<div class="each-moment">
+					<img src="images/outdoor11.jpg" alt="Awesome Moment">
+					<p>Sunny Girl参加校舞蹈比赛，得了冠军。</p>
+				</div>	
+				<div class="each-moment">
+					<img src="images/outdoor12.jpg" alt="Awesome Moment">
+					<p>妹子们，你们真棒！</p>
+				</div>
+			</section>
 
 			<section class="about-me">
 				<div class="container">
