--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
 						<div class="each-news">
 							<div class="left-part">
 								<h3 class="title">光棍节不孤单 假面舞会HIGH翻天</h3>
-								<img src="images/single13-wuhui.jpg" alt="舞会照片">
+								<a target="_blank" href="http://club.xdnice.com/forum.php?mod=viewthread&tid=1331503&highlight=%CE%E8%BB%E1">
+									<img src="images/single13-wuhui.jpg" alt="舞会照片">
+								</a>
 							</div>
 							<div class="content">
 								<p>新闻热报</p>
@@ -172,7 +174,9 @@
 						<div class="each-news">
 							<div class="left-part">
 								<h3 class="title">“小”光棍节舞会</h3>
-								<img src="images/single14-wuhui.jpg" alt="舞会照片">
+								<a target="_blank" href="http://club.xdnice.com/forum.php?mod=viewthread&tid=1370163&highlight=%CE%E8%BB%E1">
+									<img src="images/single14-wuhui.jpg" alt="舞会照片">
+								</a>
 							</div>
 							<div class="content">
 								<p>新闻热报</p>
@@ -261,6 +265,7 @@
 					</div>
 				</div>
 			</section>
+			<a name="outdoor"></a>
 			<section class="more-awesome clearfix">
 				<h2>更多精彩瞬间</h2>
 				<hr>
@@ -282,6 +287,10 @@
 					<p>舞协第二版宣传海报</p>
 				</div>
 				<div class="each-moment">
+					<img src="images/outdoor8.jpg" alt="Awesome Moment">
+					<p>参加踢踏舞演出-大河之舞</p>
+				</div>
+				<div class="each-moment">
 					<img src="images/outdoor5.jpg" alt="Awesome Moment">
 					<p>踢踏舞表演结束之后，大家一起去嗨皮</p>
 				</div>
@@ -293,10 +302,7 @@
 					<img src="images/outdoor7.jpg" alt="Awesome Moment">
 					<p>舞协参加校五四青年汇演</p>
 				</div>
-				<div class="each-moment">
-					<img src="images/outdoor8.jpg" alt="Awesome Moment">
-					<p>参加踢踏舞演出-大河之舞</p>
-				</div>	
+	
 				<div class="each-moment">
 					<img src="images/outdoor9.jpg" alt="Awesome Moment">
 					<p>校庆80周年，大型舞蹈剧-长征路上，感谢舞协！</p>
@@ -314,7 +320,6 @@
 					<p>妹子们，你们真棒！</p>
 				</div>
 			</section>
-
 			<section class="about-me">
 				<div class="container">
 					<a name="about_me"></a>
@@ -345,6 +350,9 @@
 						</div>
 					</div>
 				</div>
+			</section>
+			<section class="special-thanks">
+				特别感谢王方，樊敏这两位会长能将舞协接管并很好的传承给下一级
 			</section>
 			<footer>
 				西安电子科技大学 舞蹈协会
