modified some text

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<section class="hero-img text-center">
 				<div class="hero-img-layer"></div>
 				<div class="slogon">
-					<h1>舞动青春，舞动西电</h1>
-					<p>舞蹈协会，有你更精彩</p>
+					<h1>舞协的前世今生</h1>
+					<p>舞动青春，舞动西电，舞蹈协会，有你更精彩</p>
 				</div>
 				<div class="brief-introduction">
 					<ul>
@@ -44,7 +44,7 @@
 						</li>
 						<li>
 							<div class="first-line">
-								<span class="number">148</span><span class="unit">人</span>
+								<span class="number">248</span><span class="unit">人</span>
 							</div>
 							<span class="title">现有会员</span>
 						</li>
@@ -309,7 +309,7 @@
 				</div>																											
 				<div class="each-moment">
 					<img src="images/outdoor11.jpg" alt="Awesome Moment">
-					<p>Sunny Girl参加校舞蹈比赛，得了冠军。</p>
+					<p>Sunny Girl参加QQ炫舞选秀大赛西安分站赛，最佳优秀奖</p>
 				</div>	
 				<div class="each-moment">
 					<img src="images/outdoor12.jpg" alt="Awesome Moment">
