add president interview

--- a/index.html
+++ b/index.html
@@ -320,6 +320,21 @@
 					<p>校庆80周年，大型舞蹈剧-长征路上，感谢舞协！</p>
 				</div>				
 			</section>
+			<section class="interview">
+				<div class="container">
+				<h2>会长专访</h2>
+				<hr>
+				<div class="member">
+						<i class="icon-quotes-left"></i>
+						<p>征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...</p>
+						<hr>
+						<img src="images/fang.png" alt="">
+						<p>王方</p>
+						<p class="title">舞蹈协会第二届会长</p>
+				</div>		
+				</div>		
+			</section>
+
 			<section class="about-me">
 				<div class="container">
 					<a name="about_me"></a>
