--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 10]> <html class="old-ie"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
 	<head>
 		<title>My Design</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
