add interview content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 				</header>
 			</div>
 			<section class="hero-img text-center">
-				<div class="hero-img-layer"></div>
 				<div class="slogon">
 					<h1>舞协的前世今生</h1>
 					<p>舞动青春，舞动西电，舞蹈协会，有你更精彩</p>
@@ -326,11 +325,14 @@
 				<hr>
 				<div class="member">
 						<i class="icon-quotes-left"></i>
-						<p>征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...征稿中...</p>
+						<p>感谢司帮主对我的信任，将年轻的舞协交给我。时至今日，我依然清晰的记得校庆百人舞蹈《长征路上》的排练情景，我们的大嗓门樊敏又在“签到点名”了、我们的摄影师其宇又在“捕捉精彩”了，我们的后勤部长二磊又在“端茶倒水”了，我想参加过这个舞蹈的每个人也不会忘记，因为三个月的高强度排练已经建立起了大家之间的羁绊。还记得，娜姐带领“SUNNY GIRLS”排练猫舞的情景；还记得，我们“SUNNY GIRLS”应邀参加鹏翔驾校年度表彰大会演出的情景；还记得...这就是舞协，给予了我太多美好回忆！</p>
+						<p>在这里，可以轻舞飞扬，纵情欢笑;</p>
+						<p>在这里，可以历练自己，更加自信坦然。</p>
+						<p>在这里，收获的不止是舞步，还有真正的友情，或者爱情。</p>
 						<hr>
 						<img src="images/fang.png" alt="">
 						<p>王方</p>
-						<p class="title">舞蹈协会第二届会长</p>
+						<p class="title">舞蹈协会第二届会长 经管院在读博士</p>
 				</div>		
 				</div>		
 			</section>
