--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 						<hr>
 						<img src="images/fang.png" alt="">
 						<p>王方</p>
-						<p class="title">舞蹈协会第二届会长 经管院在读博士</p>
+						<p class="title">舞蹈协会第二届会长</p>
 				</div>		
 				</div>		
 			</section>
